--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "fastify_primeros_pasos",
+  "name": "fastifyserver",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "node --watch server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "@fastify/swagger": "^9.5.1",
-    "@fastify/swagger-ui": "^5.2.3",
-    "fastify": "^5.5.0"
-  },
-  "devDependencies": {
-    "@types/node": "^24.3.0"
-  }
+  "type": "module"
 }
