--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "@fastify/type-provider-typebox": "^5.2.0",
     "fastify": "^5.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0"
   }
 }
