--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fastify": "^5.5.0"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0"
+    "@types/node": "^24.3.0",
+    "pino-pretty": "^13.1.1"
   }
 }
